--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -444,3 +444,12 @@ h1, h2, h3, h4, h5, h6, .font-heading {
 .back-to-top i{
   font-size: 35px;
 }
+
+
+    /*MEDIA QUERIES*/
+@media (max-width: 480px){
+.col-5 {
+    flex: 0 0 auto;
+    width: 100%;
+}
+}
