--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,6 @@ h1, h2, h3, h4, h5, h6, .font-heading {
 .section {
   padding: 5rem 0;
 }
-
 .filters a {
   text-decoration: none;
   color: #000;
@@ -343,6 +342,9 @@ h1, h2, h3, h4, h5, h6, .font-heading {
 }
 .custom-navbar .navbar-brand {
   font-size: 1.7rem;
+}
+ .site-portfolio{
+  padding: 2rem 0;
 }
 
 /* Burger */
